tdf#155177 sw: fix 2-line bug in WidowsAndOrphans::WouldFit()

The problem is that the check if the line contains a non-fly portion
was only done in the loop, but the first line is already handled before
the loop, so its non-fly portions are ignored and never less than 2
lines are moved, regardless of widow/orphan settings.

(regression from commit 8c32cc17ce914188ea6783b0f79e19c5ddbf0b8d)

Change-Id: Ic017a17233fcd58e22d54386650328f00fb3e9f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156121
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit fe89122c15744afcaccaa6d6628fa0436adf12e1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156197
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>